View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025931 | Open CASCADE | OCCT:Visualization | public | 2015-03-13 15:04 | 2015-05-14 15:31 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | tweak | ||
Status | closed | Resolution | fixed | ||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025931: Visualization - Possibility to initialize an environment texture by Image_PixMap instance | ||||
Description | It would be convenient to initialize Graphic3d_TextureEnv object with an instance of Image_PixMap class, just like other Graphic3d_Texture* classes. | ||||
Steps To Reproduce | Not required | ||||
Additional information and documentation updates | A constructor has been added to Graphic3d_TextureEnv class that accepts Image_PixMap instance. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR25931 has been created by san. SHA-1: c681a738ffe175b59b6b43b34f456253851a09a0 Detailed log of new commits: Author: san Date: Fri Mar 13 15:16:46 2015 +0300 0025931: Visualization - Possibility to initialize an environment texture by Image_PixMap instance |
|
Branch CR25931 ready for reviewing. |
|
Dear bugmaster, Please test the patch. |
|
Branch CR25931 has been updated forcibly by san. SHA-1: 485f00092eb8277038f71473034e544f26fa69d2 |
|
Branch CR25931 has been updated forcibly by apv. SHA-1: 7f82a4453d04d8cd909184fcc0054d6f7a4b82f0 |
|
Branch CR25931 has been rebased on the current master |
|
Dear BugMaster, Branch CR25931 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 7f82a4453d04d8cd909184fcc0054d6f7a4b82f0 Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 11 (11 on master) Windows: 4 (4 on master) Regressions/Differences: Not detected Testing on Linux: Total MEMORY difference: 89901205 / 90070260 Total CPU difference: 58357.520000000244 / 58911.169999999984 Testing on Windows: Total MEMORY difference: 58088003 / 58093704 Total CPU difference: 48822.03125 / 57284.859375 |
|
Branch CR25931 has been deleted by kgv. SHA-1: 7f82a4453d04d8cd909184fcc0054d6f7a4b82f0 |
occt: master 1a6751b1 2015-03-13 14:17:46
Committer: bugmaster Details Diff |
0025931: Visualization - Possibility to initialize an environment texture by Image_PixMap instance |
Affected Issues 0025931 |
|
mod - src/Graphic3d/Graphic3d_TextureEnv.cdl | Diff File | ||
mod - src/Graphic3d/Graphic3d_TextureEnv.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-13 15:04 |
|
New Issue | |
2015-03-13 15:04 |
|
Assigned To | => san |
2015-03-13 15:17 | git | Note Added: 0038325 | |
2015-03-13 15:17 |
|
Status | new => assigned |
2015-03-13 15:18 |
|
Note Added: 0038326 | |
2015-03-13 15:18 |
|
Assigned To | san => duv |
2015-03-13 15:18 |
|
Status | assigned => resolved |
2015-03-13 15:18 |
|
Steps to Reproduce Updated | |
2015-03-13 15:19 |
|
Additional Information Updated | |
2015-03-13 15:23 |
|
Note Added: 0038327 | |
2015-03-13 15:23 |
|
Assigned To | duv => bugmaster |
2015-03-13 15:23 |
|
Status | resolved => reviewed |
2015-03-13 17:17 | git | Note Added: 0038337 | |
2015-03-13 17:54 |
|
Assigned To | bugmaster => apv |
2015-03-13 18:19 | git | Note Added: 0038351 | |
2015-03-13 18:20 |
|
Note Added: 0038353 | |
2015-03-16 15:08 |
|
Test case number | => Not needed |
2015-03-16 15:12 |
|
Note Added: 0038394 | |
2015-03-16 15:12 |
|
Assigned To | apv => bugmaster |
2015-03-16 15:12 |
|
Status | reviewed => tested |
2015-03-20 13:34 | bugmaster | Changeset attached | => occt master 1a6751b1 |
2015-03-20 13:34 | bugmaster | Status | tested => verified |
2015-03-20 13:34 | bugmaster | Resolution | open => fixed |
2015-04-09 09:48 | git | Note Added: 0039446 | |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:31 |
|
Fixed in Version | => 6.9.0 |