0025931: Visualization - Possibility to initialize an environment texture by Image_PixMap instance